added in page navigation

--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
 <body>
     <h1>Browsing the Street of Crocodiles with Bruno Schultz</h1>
 
-Bruno Schulz was a remarkable Polish-Jewish writer and artist, best known for his evocative and surreal prose that intertwines the extraordinary with the mundane, often drawing on his own childhood experiences in the small town of Drohobych.
+<p>Bruno Schulz was a remarkable Polish-Jewish writer and artist, best known for his evocative and surreal prose that intertwines the extraordinary with the mundane, often drawing on his own childhood experiences in the small town of Drohobych.</p>
+<h2>Contents</h2>
+<ul>
+    <li><a href="#About the Author">About the Author</a></li>
+    <li><a href="#Read an extract from 'The Street of Crocodiles' by Bruno Schulz">Read an extract from 'The Street of Crocodiles' by Bruno Schulz</a></li>
+    <li><a href="#Further Reading">Further Reading</a></li>
 
-<h2>About the author</h2>
+
+</ul>
+
+<h2 id="About the Author">About the author</h2>
 
 <p>Born in 1892, Schulz's literary career was marked by his two major works, "The Street of Crocodiles" and "Sanatorium Under the Sign of the Hourglass," both of which highlight his unique style characterised by rich imagery and intricate metaphors. His writings reflect a deep sense of nostalgia and an uncanny ability to capture the complexities of human emotion and memory.</p>
 
 <p>In addition to his literary contributions, Schulz was a talented visual artist, illustrating his own works and creating remarkable paintings that complemented his narratives. Tragically, his life was cut short during the Holocaust, but his legacy endures, influencing countless writers and artists with his imaginative storytelling and profound exploration of identity and memory.</p>
 
-<h2>Read an extract from 'The Street of Crocodiles' by Bruno Schulz</h2>
+<h2 id="Read an extract from 'The Street of Crocodiles' by Bruno Schulz">Read an extract from 'The Street of Crocodiles' by Bruno Schulz</h2>
 
 <h3>Chapter one: August</h3>
 
@@ -42,7 +50,7 @@ Bruno Schulz was a remarkable Polish-Jewish writer and artist, best known for hi
 
 <p>Schulz, B. (1988) ‘August’ The Fictions of Bruno Schulz, THE STREET OF CROCODILES and SANATORIUM UNDER THE SIGN OF THE HOURGLASS. London: Picador, pp.15-17</p>
 
-<h2>Further reading</h2>
+<h2 id="Further Reading">Further reading</h2>
 <ul>
 <li><a href="https://www.penguinrandomhouse.com/books/293938/the-street-of-crocodiles-and-other-stories-by-bruno-schulz-foreword-by-jonathan-safran-foer-introduction-by-david-a-goldfarb-translated-by-celina-wieniewska/9780143105145/readers-guide/">The Street of Crocodiles and Other Stories Reader’s Guide, Penguin random House </a></li>
 
