--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <p>Bruno Schulz was a remarkable Polish-Jewish writer and artist, best known for his evocative and surreal prose that intertwines the extraordinary with the mundane, often drawing on his own childhood experiences in the small town of Drohobych.</p>
 <h2>Contents</h2>
+<nav>
 <ul>
     <li><a href="#About the Author">About the Author</a></li>
     <li><a href="#Read an extract from 'The Street of Crocodiles' by Bruno Schulz">Read an extract from 'The Street of Crocodiles' by Bruno Schulz</a></li>
@@ -17,7 +18,7 @@
 
 
 </ul>
-
+</nav>
 <h2 id="About the Author">About the author</h2>
 
 <p>Born in 1892, Schulz's literary career was marked by his two major works, "The Street of Crocodiles" and "Sanatorium Under the Sign of the Hourglass," both of which highlight his unique style characterised by rich imagery and intricate metaphors. His writings reflect a deep sense of nostalgia and an uncanny ability to capture the complexities of human emotion and memory.</p>
@@ -57,4 +58,7 @@
 <li><a href="https://www.theguardian.com/books/2023/may/14/bruno-schulz-an-artist-a-murder-and-the-hijacking-of-history-benjamin-balint-review-extraordinary-mind-cruel-death">Bruno Schulz: An Artist, A Murder, and the Hijacking of History review – an extraordinary mind and a cruel death, The Guardian </a></li>
 </ul>
 </body>
+<footer>
+    Code and design: Kate McArdle Images: Unsplash
+</footer>
 </html>
