Added basic css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href=“css\crocodiles.css” rel="stylesheet" type=“text/css”>
+    <link href="CSS\crocodiles.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bruno Schulz was a remarkable Polish-Jewish writer and artist, best known for his evocative and surreal prose that intertwines the extraordinary with the mundane, often drawing on his own childhood experiences in the small town of Drohobych.">
@@ -63,6 +63,8 @@
 </ul>
 </body>
 <footer>
+    <div class="container">
     Code and design: Kate McArdle Images: Unsplash
+   </div>
 </footer>
 </html>
