--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         
         </ul>
     
-<div class="centre">
-    <h1>Browsing the Street of Crocodiles with Bruno Schultz</h1>
+
+<img src="Images/rosalind-chang-_bynz8V3NKI-unsplash.jpg"
+    alt="" >
+<h1>Browsing the Street of Crocodiles with Bruno Schultz</h1>
 
 <p>Bruno Schulz was a remarkable Polish-Jewish writer and artist, best known for his evocative and surreal prose that intertwines the extraordinary with the mundane, often drawing on his own childhood experiences in the small town of Drohobych.</p>
 
@@ -35,6 +37,8 @@
 <h3>Chapter one: August</h3>
 
 <h4 id="luminous-mornings">Luminous Mornings</h4>
+<img src="Images/rob-wicks-NSs77kSUQJg-unsplash.jpg"
+    alt="" >
 
 <p>In July my father went to take the waters and left me, with my mother and elder brother, a prey to the blinding white heat of the summer days. Dizzy with light, we dipped into that enormous book of holidays, its pages blazing with sunshine and scented with the sweet melting pulp of golden pears.</p>
 
@@ -44,6 +48,8 @@
 
 <p>After tidying up, Adela would plunge the rooms into semi-darkness by drawing down the linen blinds. All colours immediately fell an octave lower, the room filled with shadows, as if it had sunk to the bottom of the sea and the light was reflected in mirrors of green water — and the heat of the day began to breathe on the blinds as they stirred slightly in their daydreams.</p>
 <h4 id="the-market-square">The Market Square</h4>
+<img src="Images/emilie-8DjQ1W5CCa8-unsplash.jpg"
+    alt="" >
 
 <p>On Saturday afternoons I used to go for a walk with my mother. From the dusk of the hallway, we stepped at once into the brightness of the day. The passers-by, bathed in melting gold, had their eyes half closed against the glare, as if they were drenched with honey. Upper lips were drawn back, exposing the teeth. Everyone in this golden day wore that grimace of heat — as if the sun had forced his worshippers to wear identical masks of gold. The old and the young, women and children, greeted each other with these masks, painted on their faces with thick gold paint; they smiled at each other’s pagan faces — the barbaric smiles of Bacchus.</p>
 
@@ -53,6 +59,8 @@
 
 <p>Thus my mother and I ambled along the two sunny sides of Market Square, guiding our broken shadows along the houses as over a keyboard. Under our soft steps the squares of the paving stones slowly filed past — some the pale pink of human skin, some golden, some blue-grey, all flat, warm and velvety in the sun, like sundials, trodden to the point of obliteration, into blessed nothingness.</p>
 <h4 id="stryjska-street">Stryjska Street</h4>
+<img src="Images/eberhard-grossgasteiger-i4g6SlybRlU-unsplash.jpg"
+    alt="" >
 <p>And finally on the corner of Stryjska Street we passed within the shadow of the chemist’s shop. A large jar of raspberry juice in the wide window symbolized the coolness of balms which can relieve all kinds of pain. After we passed a few more houses, the street ceased to maintain any pretence of urbanity, like a man returning to his little village who, piece by piece, strips off his Sunday best, slowly changing back into a peasant as he gets closer to his home.</p>
 
 <p>The suburban houses were sinking, windows and all, into the exuberant tangle of blossom in their little gardens. Overlooked by the light of day, weeds and wild flowers of all kinds luxuriated quietly, glad of the interval for dreams beyond the margin of time on the borders of an endless day. An enormous sunflower, lifted on a powerful stem and suffering from hypertrophy, clad in the yellow mourning of the last sorrowful days of its life, bent under the weight of its monstrous girth. But the naive suburban bluebells and unpretentious dimity flowers stood helpless in their starched pink and white shifts, indifferent to the sunflower’s tragedy.</p>
@@ -65,7 +73,6 @@
 
 <li><a href="https://www.theguardian.com/books/2023/may/14/bruno-schulz-an-artist-a-murder-and-the-hijacking-of-history-benjamin-balint-review-extraordinary-mind-cruel-death">Bruno Schulz: An Artist, A Murder, and the Hijacking of History review – an extraordinary mind and a cruel death, The Guardian </a></li>
 </ul>
-</div>
 </body>
 <footer>
     <div class="container">
