--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
 
 <p>The suburban houses were sinking, windows and all, into the exuberant tangle of blossom in their little gardens. Overlooked by the light of day, weeds and wild flowers of all kinds luxuriated quietly, glad of the interval for dreams beyond the margin of time on the borders of an endless day. An enormous sunflower, lifted on a powerful stem and suffering from hypertrophy, clad in the yellow mourning of the last sorrowful days of its life, bent under the weight of its monstrous girth. But the naive suburban bluebells and unpretentious dimity flowers stood helpless in their starched pink and white shifts, indifferent to the sunflower’s tragedy.</p>
 
-<p>Schulz, B. (1988) ‘August’ The Fictions of Bruno Schulz, THE STREET OF CROCODILES and SANATORIUM UNDER THE SIGN OF THE HOURGLASS. London: Picador, pp.15-17</p>
 <h2>About the author</h2>
 
 <p>Born in 1892, Schulz's literary career was marked by his two major works, "The Street of Crocodiles" and "Sanatorium Under the Sign of the Hourglass," both of which highlight his unique style characterised by rich imagery and intricate metaphors. His writings reflect a deep sense of nostalgia and an uncanny ability to capture the complexities of human emotion and memory.</p>
@@ -64,12 +63,15 @@
 <p><a href="https://www.penguinrandomhouse.com/books/293938/the-street-of-crocodiles-and-other-stories-by-bruno-schulz-foreword-by-jonathan-safran-foer-introduction-by-david-a-goldfarb-translated-by-celina-wieniewska/9780143105145/readers-guide/">The Street of Crocodiles and Other Stories Reader’s Guide, Penguin random House </a></p>
 
 <p><a href="https://www.theguardian.com/books/2023/may/14/bruno-schulz-an-artist-a-murder-and-the-hijacking-of-history-benjamin-balint-review-extraordinary-mind-cruel-death">Bruno Schulz: An Artist, A Murder, and the Hijacking of History review – an extraordinary mind and a cruel death, The Guardian </a></p>
-
+</div>
+</div>
 </body>
 <footer>
     <div class="container">
-    Code and design: Kate McArdle Images: Unsplash
-   </div>
+    <p>Code and design: Kate McArdle Images: Unsplash</p>
+    <p>Schulz, B. (1988) ‘August’ The Fictions of Bruno Schulz, THE STREET OF CROCODILES and SANATORIUM UNDER THE SIGN OF THE HOURGLASS. London: Picador, pp.15-17</p>
+
+   
 </div>
 </footer>
 </html>
