--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <img src="Images/rosalind-chang-_bynz8V3NKI-unsplash.jpg"
     alt="" >
 </div>
-<h1>Read an extract from 'The Street of Crocodiles' by Bruno Schulz</h1>
+<h1>The Street of Crocodiles by Bruno Schulz</h1>
 </div>
 
 <div class="lummorn">
