Added basic header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Browsing the Street of Crocodiles with Bruno Schultz</title>
 </head>
 <body>
+    <header>
+        <div class="container">
+        <p class="logo">The Street of Crocodiles</p>
+        </div>
+        </header>
     
     <ul>
             <li><a href="#luminous-mornings">Luminous Mornings</a></li>
