Fixed text alignment

--- a/index.html
+++ b/index.html
@@ -12,22 +12,18 @@
 
 
 <body>
-
-
 <nav>  
     <p>The Street of Crocodiles</p>
     <ul>
             <li><a href="#luminous-mornings">Luminous Mornings</a></li>
             <li><a href="#the-market-square">The Market Square</a></li>
             <li><a href="#stryjska-street">Stryjska Street</a></li>
-            <li><a href="#Further Reading">Further Reading</a></li>
-        
-        
-        </ul>
-    </nav> 
+            <li><a href="#Further Reading">Further Reading</a></li> 
+    </ul>
+</nav> 
 
 
-  
+
 <img src="Images/rosalind-chang-_bynz8V3NKI-unsplash.jpg"
     alt="" >
 
@@ -49,13 +45,13 @@
 
 
 
-    <img src="Images/rob-wicks-NSs77kSUQJg-unsplash.jpg"
+<img src="Images/rob-wicks-NSs77kSUQJg-unsplash.jpg"
         alt="" >
 
 
 
 
-<div class="market"></div>
+<div class="market">
 <h2 id="the-market-square">The Market Square</h2>
 
 <p>On Saturday afternoons I used to go for a walk with my mother. From the dusk of the hallway, we stepped at once into the brightness of the day. The passers-by, bathed in melting gold, had their eyes half closed against the glare, as if they were drenched with honey. Upper lips were drawn back, exposing the teeth. Everyone in this golden day wore that grimace of heat — as if the sun had forced his worshippers to wear identical masks of gold. The old and the young, women and children, greeted each other with these masks, painted on their faces with thick gold paint; they smiled at each other’s pagan faces — the barbaric smiles of Bacchus.</p>
@@ -69,7 +65,7 @@
 
 
 
-    <img src="Images/emilie-8DjQ1W5CCa8-unsplash.jpg"
+<img src="Images/emilie-8DjQ1W5CCa8-unsplash.jpg"
         alt="" >
 
 
@@ -83,16 +79,14 @@
 </div>
 
 
-    <img src="Images/eberhard-grossgasteiger-i4g6SlybRlU-unsplash.jpg"
+<img src="Images/eberhard-grossgasteiger-i4g6SlybRlU-unsplash.jpg"
         alt="" >
 
 
 
-<div class="about"></div>
+<div class="about">
 <h2>About the author</h2>
-
 <p>Born in 1892, Schulz's literary career was marked by his two major works, "The Street of Crocodiles" and "Sanatorium Under the Sign of the Hourglass," both of which highlight his unique style characterised by rich imagery and intricate metaphors. His writings reflect a deep sense of nostalgia and an uncanny ability to capture the complexities of human emotion and memory.</p>
-
 <p>In addition to his literary contributions, Schulz was a talented visual artist, illustrating his own works and creating remarkable paintings that complemented his narratives. Tragically, his life was cut short during the Holocaust, but his legacy endures, influencing countless writers and artists with his imaginative storytelling and profound exploration of identity and memory.</p>
 
 <h2 id="Further Reading">Further reading</h2>
@@ -104,9 +98,6 @@
 
 
 <footer>
-    <div class="container">
     <p>Code and design: Kate McArdle Images: Unsplash</p>
-    <p>Schulz, B. (1988) ‘August’ The Fictions of Bruno Schulz, THE STREET OF CROCODILES and SANATORIUM UNDER THE SIGN OF THE HOURGLASS. London: Picador, pp.15-17</p>
-    </div>
 </footer>
 </html>
