--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 
 
 <body>
+<header>
 <nav>  
-    <p>The Street of Crocodiles</p>
-    <ul>
-            <li><a href="#luminous-mornings">Luminous Mornings</a></li>
-            <li><a href="#the-market-square">The Market Square</a></li>
-            <li><a href="#stryjska-street">Stryjska Street</a></li>
-            <li><a href="#Further Reading">Further Reading</a></li> 
-    </ul>
-</nav> 
+    <h3 class="headprg">The Street of Crocodiles</h3>
+    <h3 class="headprg">Contents</h3>
 
+</nav> 
+</header>
+<ul>
+    <li><a href="#luminous-mornings">Luminous Mornings</a></li>
+    <li><a href="#the-market-square">The Market Square</a></li>
+    <li><a href="#stryjska-street">Stryjska Street</a></li>
+    <li><a href="#Further Reading">Further Reading</a></li> 
+</ul>
 
 
 <img src="Images/rosalind-chang-_bynz8V3NKI-unsplash.jpg"
