--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 
 <body>
 <header>
-<nav>  
-    <h3 class="headprg">The Street of Crocodiles</h3>
-    <h3 class="headprg">Contents</h3>
+<nav> 
+<div class="header">
+    <p class="headerlogo">The Street of Crocodiles</p>
+    <div class="header-right">
+    <a href="#luminous-mornings">Luminous Mornings</a>
+    <a href="#the-market-square">The Market Square</a>
+    <a href="#stryjska-street">Stryjska Street</a>
+    <a href="#Further Reading">Further Reading</a>
+    </div>
+</div>
+    
 
 </nav> 
 </header>
-<ul>
-    <li><a href="#luminous-mornings">Luminous Mornings</a></li>
-    <li><a href="#the-market-square">The Market Square</a></li>
-    <li><a href="#stryjska-street">Stryjska Street</a></li>
-    <li><a href="#Further Reading">Further Reading</a></li> 
-</ul>
 
 
 <img src="Images/rosalind-chang-_bynz8V3NKI-unsplash.jpg"
