Added heading and nav

--- a/index.html
+++ b/index.html
@@ -7,36 +7,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bruno Schulz was a remarkable Polish-Jewish writer and artist, best known for his evocative and surreal prose that intertwines the extraordinary with the mundane, often drawing on his own childhood experiences in the small town of Drohobych.">
     <title>Browsing the Street of Crocodiles with Bruno Schultz</title>
+
+
+    <div class="header">
+        <p class="title">Browsing the Street of Crocodiles with Bruno Schultz</p>
+    <nav>
+        <ul>
+        <li><a href="#luminous-mornings">Luminous Mornings</a></li>
+        <li><a href="#the-market-square">The Market Square</a></li>
+        <li><a href="#stryjska-street">Stryjska Street</a></li>
+        <li><a href="#Further Reading">Further Reading</a></li>
+        </ul>
+    </nav>
+    </div>
 </head>
 
 
 
 <body>
-<header>
-<nav> 
-<div class="header">
-    <p class="headerlogo">The Street of Crocodiles</p>
-    <div class="header-right">
-    <a href="#luminous-mornings">Luminous Mornings</a>
-    <a href="#the-market-square">The Market Square</a>
-    <a href="#stryjska-street">Stryjska Street</a>
-    <a href="#Further Reading">Further Reading</a>
-    </div>
-</div>
-    
-
-</nav> 
-</header>
-
 
 <img src="Images/rosalind-chang-_bynz8V3NKI-unsplash.jpg"
     alt="" >
+
+<div class="about">
+<p>Bruno Schulz was a remarkable Polish-Jewish writer and artist, best known for his evocative and surreal prose that intertwines the extraordinary with the mundane, often drawing on his own childhood experiences in the small town of Drohobych.</p>
+<h1>About the author</h1>
+<p>Born in 1892, Schulz's literary career was marked by his two major works, "The Street of Crocodiles" and "Sanatorium Under the Sign of the Hourglass," both of which highlight his unique style characterised by rich imagery and intricate metaphors. His writings reflect a deep sense of nostalgia and an uncanny ability to capture the complexities of human emotion and memory.</p>
+<p>In addition to his literary contributions, Schulz was a talented visual artist, illustrating his own works and creating remarkable paintings that complemented his narratives. Tragically, his life was cut short during the Holocaust, but his legacy endures, influencing countless writers and artists with his imaginative storytelling and profound exploration of identity and memory.</p>
+</div>
+
+
 
 
 
 
 <div class="lummorn">
-<h2 id="luminous-mornings">Luminous Mornings</h2>
+<h1>Read an extract from 'The Street of Crocodiles' by Bruno Schulz</h1>
+<h2>Chapter one: August</h2>
+<h3 id="luminous-mornings">Luminous Mornings</h3>
 
 <p>In July my father went to take the waters and left me, with my mother and elder brother, a prey to the blinding white heat of the summer days. Dizzy with light, we dipped into that enormous book of holidays, its pages blazing with sunshine and scented with the sweet melting pulp of golden pears.</p>
 
@@ -89,11 +97,7 @@
 
 
 
-<div class="about">
-<h2>About the author</h2>
-<p>Born in 1892, Schulz's literary career was marked by his two major works, "The Street of Crocodiles" and "Sanatorium Under the Sign of the Hourglass," both of which highlight his unique style characterised by rich imagery and intricate metaphors. His writings reflect a deep sense of nostalgia and an uncanny ability to capture the complexities of human emotion and memory.</p>
-<p>In addition to his literary contributions, Schulz was a talented visual artist, illustrating his own works and creating remarkable paintings that complemented his narratives. Tragically, his life was cut short during the Holocaust, but his legacy endures, influencing countless writers and artists with his imaginative storytelling and profound exploration of identity and memory.</p>
-
+<div class="furtherreading">
 <h2 id="Further Reading">Further reading</h2>
 <p><a href="https://www.penguinrandomhouse.com/books/293938/the-street-of-crocodiles-and-other-stories-by-bruno-schulz-foreword-by-jonathan-safran-foer-introduction-by-david-a-goldfarb-translated-by-celina-wieniewska/9780143105145/readers-guide/">The Street of Crocodiles and Other Stories Reader’s Guide, Penguin random House </a></p>
 
