Adjusted layout for columns

--- a/index.html
+++ b/index.html
@@ -29,14 +29,7 @@
 <img src="Images/rosalind-chang-_bynz8V3NKI-unsplash.jpg"
     alt="" >
 
-<div class="about">
-<p>Bruno Schulz was a remarkable Polish-Jewish writer and artist, best known for his evocative and surreal prose that intertwines the extraordinary with the mundane, often drawing on his own childhood experiences in the small town of Drohobych.</p>
-<h1>About the author</h1>
-<p>Born in 1892, Schulz's literary career was marked by his two major works, "The Street of Crocodiles" and "Sanatorium Under the Sign of the Hourglass," both of which highlight his unique style characterised by rich imagery and intricate metaphors. His writings reflect a deep sense of nostalgia and an uncanny ability to capture the complexities of human emotion and memory.</p>
-<p>In addition to his literary contributions, Schulz was a talented visual artist, illustrating his own works and creating remarkable paintings that complemented his narratives. Tragically, his life was cut short during the Holocaust, but his legacy endures, influencing countless writers and artists with his imaginative storytelling and profound exploration of identity and memory.</p>
-</div>
-
-
+<div class="container">
 
 
 
@@ -95,14 +88,23 @@
 <img src="Images/eberhard-grossgasteiger-i4g6SlybRlU-unsplash.jpg"
         alt="" >
 
-
-
-<div class="furtherreading">
-<h2 id="Further Reading">Further reading</h2>
-<p><a href="https://www.penguinrandomhouse.com/books/293938/the-street-of-crocodiles-and-other-stories-by-bruno-schulz-foreword-by-jonathan-safran-foer-introduction-by-david-a-goldfarb-translated-by-celina-wieniewska/9780143105145/readers-guide/">The Street of Crocodiles and Other Stories Reader’s Guide, Penguin random House </a></p>
-
-<p><a href="https://www.theguardian.com/books/2023/may/14/bruno-schulz-an-artist-a-murder-and-the-hijacking-of-history-benjamin-balint-review-extraordinary-mind-cruel-death">Bruno Schulz: An Artist, A Murder, and the Hijacking of History review – an extraordinary mind and a cruel death, The Guardian </a></p>
 </div>
+
+
+
+    <div class="about">
+    <p>Bruno Schulz was a remarkable Polish-Jewish writer and artist, best known for his evocative and surreal prose that intertwines the extraordinary with the mundane, often drawing on his own childhood experiences in the small town of Drohobych.</p>
+    <h1>About the author</h1>
+    <p>Born in 1892, Schulz's literary career was marked by his two major works, "The Street of Crocodiles" and "Sanatorium Under the Sign of the Hourglass," both of which highlight his unique style characterised by rich imagery and intricate metaphors. His writings reflect a deep sense of nostalgia and an uncanny ability to capture the complexities of human emotion and memory.</p>
+    <p>In addition to his literary contributions, Schulz was a talented visual artist, illustrating his own works and creating remarkable paintings that complemented his narratives. Tragically, his life was cut short during the Holocaust, but his legacy endures, influencing countless writers and artists with his imaginative storytelling and profound exploration of identity and memory.</p>
+    </div>
+    <div class="furtherreading">
+        <h2 id="Further Reading">Further reading</h2>
+        <p><a href="https://www.penguinrandomhouse.com/books/293938/the-street-of-crocodiles-and-other-stories-by-bruno-schulz-foreword-by-jonathan-safran-foer-introduction-by-david-a-goldfarb-translated-by-celina-wieniewska/9780143105145/readers-guide/">The Street of Crocodiles and Other Stories Reader’s Guide, Penguin random House </a></p>
+        
+        <p><a href="https://www.theguardian.com/books/2023/may/14/bruno-schulz-an-artist-a-murder-and-the-hijacking-of-history-benjamin-balint-review-extraordinary-mind-cruel-death">Bruno Schulz: An Artist, A Murder, and the Hijacking of History review – an extraordinary mind and a cruel death, The Guardian </a></p>
+    </div>
+
 </body>
 
 
