Added intro section

--- a/index.html
+++ b/index.html
@@ -29,16 +29,17 @@
 
     <img src="Images/rosalind-chang-_bynz8V3NKI-unsplash.jpg"
     alt="" >
+    <p class="intro">Bruno Schulz was a remarkable Polish-Jewish writer and artist, best known for his evocative and
+        surreal prose that intertwines the extraordinary with the mundane, often drawing on his own
+        childhood experiences in the small town of Drohobych.</p>
 
 
 
     <div class="container grid">
         <div class="grid-col-third">
             <div class="about">
-                <p>Bruno Schulz was a remarkable Polish-Jewish writer and artist, best known for his evocative and
-                    surreal prose that intertwines the extraordinary with the mundane, often drawing on his own
-                    childhood experiences in the small town of Drohobych.</p>
-                <h1>About the author</h1>
+
+                <h2>About the author</h2>
                 <p>Born in 1892, Schulz's literary career was marked by his two major works, "The Street of Crocodiles"
                     and "Sanatorium Under the Sign of the Hourglass," both of which highlight his unique style
                     characterised by rich imagery and intricate metaphors. His writings reflect a deep sense of
