--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 <li><a href="#Further Reading">Further Reading</a></li>
             </ul>
         </nav>
-        <p class="title">Browsing the Street of Crocodiles with Bruno Schultz</p>
     </div>
 </head>
 
@@ -26,7 +25,7 @@
 
 <body>
 
-    <img src="Images/rosalind-chang-_bynz8V3NKI-unsplash.jpg" alt="">
+    <img src="Images\titleimage.jpg" alt="">
     <p class="intro">Bruno Schulz was a remarkable Polish-Jewish writer and artist, best known for his evocative and
         surreal prose that intertwines the extraordinary with the mundane, often drawing on his own
         childhood experiences in the small town of Drohobych.</p>
