--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link href="css/crocodiles.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
+    <script src="https://kit.fontawesome.com/0813f052ce.js" crossorigin="anonymous"></script>
+    <meta name="description
         content="Bruno Schulz was a remarkable Polish-Jewish writer and artist, best known for his evocative and surreal prose that intertwines the extraordinary with the mundane, often drawing on his own childhood experiences in the small town of Drohobych.">
     <title>Browsing the Street of Crocodiles with Bruno Schultz</title>
 
@@ -197,7 +198,11 @@
 
 
     <footer>
-        <p>Code and design: Kate McArdle Images: Unsplash</p>
+        <p>Code and design: Kate McArdle</p>
+        <p>Images: Unsplash</p>
+        <a href="https://www.figma.com/design/jgKiYus1rDL7ACTkhgztRW/Project-3---Crocodiles?node-id=0-1&t=98SHn13lMJeoEklK-1"><i class="fa-brands fa-figma"></i></a>
+        <a href="https://www.amazon.co.uk/Street-Crocodiles-Stories-Penguin-Classics/dp/0143105140/ref=sr_1_2?crid=14ZXYUBXE9XT&dib=eyJ2IjoiMSJ9.qD6iAOYGH5le5mKs0VyzwkqDHXxpexuNOkaHu8Ywk7v-efcpQMtyYhYjDt6Qf2_eV07oMhYSnpU7KgFq6FqKGrk6QuM3OUVsil-vYfVk76TqM6qYaocXKKzgAUruY7wml_m0aP84Bmi4__V_cIHBSDCimapNgAKN8ZSiInd4Y7252GkRDEYjF_RRijxS6EhS.zs3pCQUGfUG82ocMzgL3UONOmt8bNMw8G0zbIoxY-Rk&dib_tag=se&keywords=bruno+schulz+the+street+of+crocodiles&nsdOptOutParam=true&qid=1733592968&sprefix=bruno+schul%2Caps%2C69&sr=8-2"><i class="fa-brands fa-amazon"></i></a>
+        <a href="https://www.instagram.com/bsoadigital.design/"><i class="fa-brands fa-instagram"></i></a>
     </footer>
 </body>
 
