Added titles for links

--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
     <footer>
         <p>Code and design: Kate McArdle</p>
         <p>Images: Unsplash</p>
-        <li><a href="https://www.figma.com/design/jgKiYus1rDL7ACTkhgztRW/Project-3---Crocodiles?node-id=0-1&t=98SHn13lMJeoEklK-1"><i class="fa-brands fa-figma"></i></a></li>
-        <li><a href="https://www.amazon.co.uk/Street-Crocodiles-Stories-Penguin-Classics/dp/0143105140/ref=sr_1_2?crid=14ZXYUBXE9XT&dib=eyJ2IjoiMSJ9.qD6iAOYGH5le5mKs0VyzwkqDHXxpexuNOkaHu8Ywk7v-efcpQMtyYhYjDt6Qf2_eV07oMhYSnpU7KgFq6FqKGrk6QuM3OUVsil-vYfVk76TqM6qYaocXKKzgAUruY7wml_m0aP84Bmi4__V_cIHBSDCimapNgAKN8ZSiInd4Y7252GkRDEYjF_RRijxS6EhS.zs3pCQUGfUG82ocMzgL3UONOmt8bNMw8G0zbIoxY-Rk&dib_tag=se&keywords=bruno+schulz+the+street+of+crocodiles&nsdOptOutParam=true&qid=1733592968&sprefix=bruno+schul%2Caps%2C69&sr=8-2"><i class="fa-brands fa-amazon"></i></a></li>
-        <li><a href="https://www.instagram.com/bsoadigital.design/"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="https://www.figma.com/design/jgKiYus1rDL7ACTkhgztRW/Project-3---Crocodiles?node-id=0-1&t=98SHn13lMJeoEklK-1" title="Link to Figma Mockup File"><i class="fa-brands fa-figma"></i></a></li>
+        <li><a href="https://www.amazon.co.uk/Street-Crocodiles-Stories-Penguin-Classics/dp/0143105140/ref=sr_1_2?crid=14ZXYUBXE9XT&dib=eyJ2IjoiMSJ9.qD6iAOYGH5le5mKs0VyzwkqDHXxpexuNOkaHu8Ywk7v-efcpQMtyYhYjDt6Qf2_eV07oMhYSnpU7KgFq6FqKGrk6QuM3OUVsil-vYfVk76TqM6qYaocXKKzgAUruY7wml_m0aP84Bmi4__V_cIHBSDCimapNgAKN8ZSiInd4Y7252GkRDEYjF_RRijxS6EhS.zs3pCQUGfUG82ocMzgL3UONOmt8bNMw8G0zbIoxY-Rk&dib_tag=se&keywords=bruno+schulz+the+street+of+crocodiles&nsdOptOutParam=true&qid=1733592968&sprefix=bruno+schul%2Caps%2C69&sr=8-2" title="Buy the Book on Amazon"><i class="fa-brands fa-amazon"></i></a></li>
+        <li><a href="https://www.instagram.com/bsoadigital.design/" title="Follow Digital Design on Instagram"><i class="fa-brands fa-instagram"></i></a></li>
     </footer>
 </body>
 
