Got font to work

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Ledger&display=swap');
+    </style>
     <link href="css/crocodiles.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,17 +39,24 @@
         surreal prose that intertwines the extraordinary with the mundane, often drawing on his own
         childhood experiences in the small town of Drohobych.</p>
 
-    <div class="about">
-        <h2 id="about">About the author</h2>
-        <p>Born in 1892, Schulz's literary career was marked by his two major works, "The Street of Crocodiles"
-            and "Sanatorium Under the Sign of the Hourglass," both of which highlight his unique style
-            characterised by rich imagery and intricate metaphors. His writings reflect a deep sense of
-            nostalgia and an uncanny ability to capture the complexities of human emotion and memory.</p>
-        <p>In addition to his literary contributions, Schulz was a talented visual artist, illustrating his own
-            works and creating remarkable paintings that complemented his narratives. Tragically, his life was
-            cut short during the Holocaust, but his legacy endures, influencing countless writers and artists
-            with his imaginative storytelling and profound exploration of identity and memory.</p>
+<div class="aboutcontainer grid">
+    <div class="grid-col-half">
+        <img src="Images\brunoschulz.jpg" alt="">
     </div>
+    <div class="grid-col-secondhalf">
+        <div class="about">
+            <h2 id="about">About the author</h2>
+            <p>Born in 1892, Schulz's literary career was marked by his two major works, "The Street of Crocodiles"
+                and "Sanatorium Under the Sign of the Hourglass," both of which highlight his unique style
+                characterised by rich imagery and intricate metaphors. His writings reflect a deep sense of
+                nostalgia and an uncanny ability to capture the complexities of human emotion and memory.</p>
+            <p>In addition to his literary contributions, Schulz was a talented visual artist, illustrating his own
+                works and creating remarkable paintings that complemented his narratives. Tragically, his life was
+                cut short during the Holocaust, but his legacy endures, influencing countless writers and artists
+                with his imaginative storytelling and profound exploration of identity and memory.</p>
+        </div>
+    </div>
+</div>
 
     <hr class="solid">
     <h2 class="extract">Read an extract from 'The Street of Crocodiles' by Bruno Schulz</h2>
