Added blockquote reference

--- a/index.html
+++ b/index.html
@@ -188,6 +188,13 @@
                 suburban
                 bluebells and unpretentious dimity flowers stood helpless in their starched pink and white shifts,
                 indifferent to the sunflower’s tragedy.</p>
+                <figure class="quote">
+                    <blockquote>
+                        <p>Schulz, B. (1988) ‘August’ The Fictions of Bruno Schulz, THE STREET OF CROCODILES and SANATORIUM UNDER THE
+                            SIGN OF THE HOURGLASS. London: Picador, pp.15-17</p>
+                    </blockquote>
+                </figure>
+                
         </div>
 
 
