--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
     <meta name="description"
         content="Bruno Schulz was a remarkable Polish-Jewish writer and artist, best known for his evocative and surreal prose that intertwines the extraordinary with the mundane, often drawing on his own childhood experiences in the small town of Drohobych.">
     <title>Browsing the Street of Crocodiles with Bruno Schultz</title>
+</head>
 
-
+<body>
     <div class="header">
         <nav>
             <ul>
                 <li><a href="#chapter">Chapter One</a></li>
                 <li><a href="#about">About the Author</a></li>
-                <li><a href="#Further Reading">Further Reading</a></li>
+                <li><a href="#Further-Reading">Further Reading</a></li>
             </ul>
         </nav>
     </div>
-</head>
 
 
 
-<body>
+
+
     <div class="imagecontainer">
-        <img src="Images\rosalind-chang-_bynz8V3NKI-unsplash.jpg" alt="">
+        <img src="Images/rosalind-chang-_bynz8V3NKI-unsplash.jpg" alt="">
         <div class="centered">
             <h1>Browsing the Street of Crocodiles with Bruno Schultz</h1>
         </div>
@@ -41,7 +42,7 @@
 
 <div class="aboutcontainer grid">
     <div class="grid-col-half">
-        <img src="Images\brunoschulz.jpg" alt="">
+        <img src="Images/brunoschulz.jpg" alt="">
     </div>
     <div class="grid-col-secondhalf">
         <div class="about">
@@ -207,7 +208,7 @@
 
 
     <div class="furtherreading">
-        <h2 id="Further Reading">Further reading</h2>
+        <h2 id="Further-Reading">Further reading</h2>
         <p><a
                 href="https://www.penguinrandomhouse.com/books/293938/the-street-of-crocodiles-and-other-stories-by-bruno-schulz-foreword-by-jonathan-safran-foer-introduction-by-david-a-goldfarb-translated-by-celina-wieniewska/9780143105145/readers-guide/">The
                 Street of Crocodiles and Other Stories Reader’s Guide, Penguin random House </a></p>
