Formatted both pages

--- a/index.html
+++ b/index.html
@@ -40,24 +40,23 @@
         surreal prose that intertwines the extraordinary with the mundane, often drawing on his own
         childhood experiences in the small town of Drohobych.</p>
 
-<div class="aboutcontainer grid">
-    <div class="grid-col-half">
-        <img src="Images/brunoschulz.jpg" alt="">
+
+
+
+
+    <div class="about">
+        <h2 id="about">About the author</h2>
+        <p>Born in 1892, Schulz's literary career was marked by his two major works, "The Street of Crocodiles"
+            and "Sanatorium Under the Sign of the Hourglass," both of which highlight his unique style
+            characterised by rich imagery and intricate metaphors. His writings reflect a deep sense of
+            nostalgia and an uncanny ability to capture the complexities of human emotion and memory.</p>
+        <p>In addition to his literary contributions, Schulz was a talented visual artist, illustrating his own
+            works and creating remarkable paintings that complemented his narratives. Tragically, his life was
+            cut short during the Holocaust, but his legacy endures, influencing countless writers and artists
+            with his imaginative storytelling and profound exploration of identity and memory.</p>
     </div>
-    <div class="grid-col-secondhalf">
-        <div class="about">
-            <h2 id="about">About the author</h2>
-            <p>Born in 1892, Schulz's literary career was marked by his two major works, "The Street of Crocodiles"
-                and "Sanatorium Under the Sign of the Hourglass," both of which highlight his unique style
-                characterised by rich imagery and intricate metaphors. His writings reflect a deep sense of
-                nostalgia and an uncanny ability to capture the complexities of human emotion and memory.</p>
-            <p>In addition to his literary contributions, Schulz was a talented visual artist, illustrating his own
-                works and creating remarkable paintings that complemented his narratives. Tragically, his life was
-                cut short during the Holocaust, but his legacy endures, influencing countless writers and artists
-                with his imaginative storytelling and profound exploration of identity and memory.</p>
-        </div>
-    </div>
-</div>
+
+
 
     <hr class="solid">
     <h2 class="extract">Read an extract from 'The Street of Crocodiles' by Bruno Schulz</h2>
@@ -189,13 +188,14 @@
                 suburban
                 bluebells and unpretentious dimity flowers stood helpless in their starched pink and white shifts,
                 indifferent to the sunflower’s tragedy.</p>
-                <figure class="quote">
-                    <blockquote>
-                        <p>Schulz, B. (1988) ‘August’ The Fictions of Bruno Schulz, THE STREET OF CROCODILES and SANATORIUM UNDER THE
-                            SIGN OF THE HOURGLASS. London: Picador, pp.15-17</p>
-                    </blockquote>
-                </figure>
-                
+            <figure class="quote">
+                <blockquote>
+                    <p>Schulz, B. (1988) ‘August’ The Fictions of Bruno Schulz, THE STREET OF CROCODILES and SANATORIUM
+                        UNDER THE
+                        SIGN OF THE HOURGLASS. London: Picador, pp.15-17</p>
+                </blockquote>
+            </figure>
+
         </div>
 
 
