Added alt text for images

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
     <div class="imagecontainer">
-        <img src="Images/rosalind-chang-_bynz8V3NKI-unsplash.jpg" alt="">
+        <img src="Images/rosalind-chang-_bynz8V3NKI-unsplash.jpg" alt="background image">
         <div class="centered">
             <h1>Browsing the Street of Crocodiles with Bruno Schultz</h1>
         </div>
@@ -103,7 +103,7 @@
 
 
 
-        <img src="Images/rob-wicks-NSs77kSUQJg-unsplash.jpg" alt="">
+        <img src="Images/rob-wicks-NSs77kSUQJg-unsplash.jpg" alt="Image of fruit basket">
 
 
 
@@ -160,7 +160,7 @@
 
 
 
-        <img src="Images/emilie-8DjQ1W5CCa8-unsplash.jpg" alt="">
+        <img src="Images/emilie-8DjQ1W5CCa8-unsplash.jpg" alt="Image of acacia tree">
 
 
 
@@ -198,7 +198,7 @@
         </div>
 
 
-        <img src="Images/eberhard-grossgasteiger-i4g6SlybRlU-unsplash.jpg" alt="">
+        <img src="Images/eberhard-grossgasteiger-i4g6SlybRlU-unsplash.jpg" alt="Image of Sunflower">
     </div>
 
 
